@@ -146,14 +146,14 @@ public class RowDataSet implements IHistoricalDataSet {
 		if(COL_ROW_NUM == col) {
 			Integer[] rows = new Integer[Math.min(end-start, data.size())];
 			for(int i=0;i<rows.length; i++)
-				rows[i] = new Integer(start+i+1);
+				rows[i] = Integer.valueOf(start+i+1);
 			return rows;
 		}
 
 		Object[] d = new Object[Math.min(end-start, data.size())];
 		
 		for(int i=0; i<d.length; i++)
-			d[i] = ((IDataEntry)data.get(start+i)).getColumn(col)[0];
+			d[i] = data.get(start+i).getColumn(col)[0];
 		return d;
 	}
 	
@@ -175,7 +175,7 @@ public class RowDataSet implements IHistoricalDataSet {
 		if(entry < 0 || entry >= getEntryCount())
 			return null;
 		else
-			return (IDataEntry)data.get(entry);
+			return data.get(entry);
 	}
 	//End IHistoricalDataSet Methods
 	
